# google-test-practice

./: .travis.yml  CMakeLists.txt  ReadMe.md
calculator/: calculator.cc  calculator.h
src/: CMakeLists.txt
test/: CMakeLists.txt  calculator_test.cc  main.cpp
